pipelinefiles/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: payment
  name: payment
  namespace: payment-project
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8081
  selector:
    deploymentconfig: payment
  type: ClusterIP
