pipelinefiles/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: payment
  name: payment
  namespace: payment-project
spec:
  host: payment-payment-project.app.182.48.70.85.nip.io
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: payment
    weight: 100
  wildcardPolicy: None
